Listo para trabajar con javaFx